--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,11 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#6a59b0">
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/static/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/static/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/static/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/static/favicon-16x16.png">
+    <link rel="mask-icon" href="%PUBLIC_URL%/static/safari-pinned-tab.svg" color="#6a59b0">
     <meta name="msapplication-TileColor" content="#6a59b0">
     <meta name="theme-color" content="#6a59b0">
     <!--
