--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
     <link rel="mask-icon" href="%PUBLIC_URL%/static/safari-pinned-tab.svg" color="#6a59b0">
     <meta name="msapplication-TileColor" content="#6a59b0">
     <meta name="theme-color" content="#6a59b0">
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
