--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/static/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/static/android-chrome-192x192.png">
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/static/favicon-16x16.png">
-    <link rel="mask-icon" href="%PUBLIC_URL%/static/safari-pinned-tab.svg" color="#6a59b0">
-    <meta name="msapplication-TileColor" content="#6a59b0">
-    <meta name="theme-color" content="#6a59b0">
+    <link rel="mask-icon" href="%PUBLIC_URL%/static/safari-pinned-tab.svg" color="#382584">
+    <meta name="msapplication-TileColor" content="#382584">
+    <meta name="theme-color" content="#382584">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
     <!--
