--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,9 @@
     <link rel="mask-icon" href="%PUBLIC_URL%/static/safari-pinned-tab.svg" color="#382584">
     <meta name="msapplication-TileColor" content="#382584">
     <meta name="theme-color" content="#382584">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#382584">
+    <meta name="apple-mobile-web-app-title" content="4i">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
     <!--
