--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,15 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/static/apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/static/apple-touch-icon.png" sizes="57x57">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/static/apple-touch-icon.png" sizes="60x60">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/static/apple-touch-icon.png" sizes="72x72">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/static/apple-touch-icon.png" sizes="76x76">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/static/apple-touch-icon.png" sizes="114x114">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/static/apple-touch-icon.png" sizes="120x120">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/static/apple-touch-icon.png" sizes="144x144">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/static/apple-touch-icon.png" sizes="152x152">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/static/apple-touch-icon.png" sizes="180x180">
     <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/static/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/static/android-chrome-192x192.png">
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/static/favicon-16x16.png">
